Fix sticky header side padding gaps on mobile

--- a/src/stylesheets/styles.css
+++ b/src/stylesheets/styles.css
@@ -25,11 +25,17 @@ h1 small {
   position: -webkit-sticky; /* ;_; still needed for mobile */
   position: sticky;
   top: 0;
-  padding: 0.5em 0;
-  margin: 0;
+  padding: 1em;
+  margin: 0 -0.5em;
   background: linear-gradient(0deg, rgba(255, 255, 255, 0), white 15px);
   z-index: 100;
   display: block;
+  width: 100%;
+
+  @media (max-width: 480px) {
+    margin-left: -5vw;
+    padding-left: 5vw;
+  }
 }
 
 .sticky-header h2 {
